[package]
name = "sledis"
version = "0.0.2"
authors = ["theseriousadult <jack@gallabytes.com>", "mobile-bungalow <pwmay@ucsc.edu>"]
edition = "2018"
description = "an embeddable datastructure store on top of sled"
license = "AGPL-3.0-or-later"
repository = "https://github.com/GallagherCommaJack/sledis"

[dependencies]
dashmap = "3.11.4"
parking_lot = "0.10.2"
sled = "0.34.0"
thiserror = "1.0.15"

[dev-dependencies]
criterion = "0.3.2"
jemallocator = "0.1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tempfile = "3.1.0"

[[bench]]
name = "lists"
harness = false
